--- a/pom.xml
+++ b/pom.xml
@@ -4,44 +4,57 @@
 	<groupId>fr.blablacar</groupId>
 	<artifactId>learn-java</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<properties>
+		<jersey.version>2.23.2</jersey.version>
+		<jetty.version>9.4.0.M1</jetty.version>
+	</properties>
 
 	<dependencies>
 
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-server</artifactId>
-			<version>2.23.2</version>
+			<version>${jersey.version}</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet-core</artifactId>
-			<version>2.23.2</version>
+			<version>${jersey.version}</version>
 		</dependency>
-
 
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
 			<artifactId>jersey-media-json-jackson</artifactId>
-			<version>2.23.2</version>
+			<version>${jersey.version}</version>
 		</dependency>
-		
-
-
 
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-server</artifactId>
-			<version>9.4.0.M1</version>
+			<version>${jetty.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlet</artifactId>
-			<version>9.4.0.M1</version>
+			<version>${jetty.version}</version>
 		</dependency>
 
-
 	</dependencies>
+	<build>
+
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<!-- or whatever version you use -->
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+
+	</build>
 </project>
