--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
 				<configuration>
 					<!-- or whatever version you use -->
 					<source>1.8</source>
